--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "@metamask/detect-provider": "github:metamask/detect-provider",
     "@metamask/sdk": "^0.5.6",
     "concurrently": "^8.2.0",
-    "ethers": "^6.6.7",
+    "jquery": "^3.6.0",
     "latest-version": "^7.0.0",
     "static-i18n": "^0.2.1",
     "typescript": "^5.1.6",
     "web3": "^4.0.3",
-    "jquery": "^3.6.0",
     "web3-eth-contract": "^4.0.3"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
+    "ethers": "^5.7.2",
     "events": "^3.3.0",
     "process": "^0.11.10"
   }
