--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "static-i18n": "^0.2.1",
     "typescript": "^5.1.6",
     "web3": "^4.0.3",
+    "parcel": "^2.8.2",
     "web3-eth-contract": "^4.0.3"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
     "ethers": "^5.7.2",
     "events": "^3.3.0",
+    "gh-pages": "^6.0.0",
     "process": "^0.11.10"
   }
 }
